force-app/main/default/objects/ServiceContract/fields/IsKeyExchange__c.field-meta.xml
<CustomField>
    <fullName>IsKeyExchange__c</fullName>
    <defaultValue>&quot;有&quot;</defaultValue>
    <label>鍵交換有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>有</fullName>
            </value>
            <value>
                <fullName>無</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>