force-app/main/default/objects/ServiceContract/fields/LeftEmployeeInfoArrangement__c.field-meta.xml
<CustomField>
    <fullName>LeftEmployeeInfoArrangement__c</fullName>
    <label>退去者情報取り決め</label>
    <length>255</length>
    <type>Text</type>
</CustomField>