force-app/main/default/objects/ServiceContract/fields/SelfPayUnderstandDate__c.field-meta.xml
<CustomField>
    <fullName>SelfPayUnderstandDate__c</fullName>
    <label>個人負担了承日</label>
    <type>Date</type>
</CustomField>